# PANW-AIRS

./: .gitignore  README.md
AI-Model-Security/: README.md  ai-model-security.sh  ai-model-security_FIXED.ipynb  pyproject.toml
API-Intercept/: attack-examples.md
API-Intercept/LAB/: api-intercept-hands-on-part01.ipynb  api-intercept-hands-on-part02.ipynb
API-Intercept/LAB/exercises/: detect-db-sec-attack.sh
API-Intercept/LAB/exercises/Contextual_grounding/: README.md  contextual_grounding.sh  contextual_grounding_with_response.sh
API-Intercept/LAB/exercises/Custom_topic_guardrails/: custom_topic_guard_01.sh
API-Intercept/LAB/exercises/Prompt_Injections/: README.md  prompt-injection-01.sh
API-Intercept/LAB/exercises/REPORTS/: report_id_retrieval.sh
API-Intercept/LAB/exercises/arxiv_2511.15304/: README.md  myfile.txt
Bluefield/: README.md
